[package]
name = "acmev02-library"
edition = "2018"
description = "ACME client library to issue, renew and revoke TLS certificates."
version = "0.5.3"
authors = ["David Cuthbert <dacut@kanga.org", "Onur Aslan <onur@onur.im>"]
license = "MIT"
keywords = ["letsencrypt", "acme"]
readme = "README.md"
documentation = "https://docs.rs/acmev02-client"
repository = "https://github.com/dacut/acmev02-client"

[dependencies]
base64 = "0.13"
env_logger = { version = "0.8", optional = true }
error-chain = "0.12"
foreign-types = { version = "0.5", optional = true }
hyper = "0.14"
log = "0.4"
num-bigint = "0.3"
openssl = "0.10"
openssl-sys = { version = "0.9", optional = true }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
simple_asn1 = "0.5"
tokio = { version = "1.2", features = ["fs", "macros", "net", "rt", "sync"] }

[dev-dependencies]
env_logger = "0.8"
ctor = "0.1"